Fixed pies?
Cauldrons have different sealed perish rates & cook times
Cooked meat can be glazed with honey/syrup
Gelatin-making process more complicated
RenderIngredients now uses selectiveElements to cut down on files
Soulstorm brew integrated with Alchemy
Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt) , they are now actual simmer recipes 

1.6.4
Added Compote - DONE!!!
Wildcraft gelatin recipes fixed - DONE!!!
Added Acorn "Coffee" & Roasted Acorns - DONE!!!
Handbook mentions you can get resin from acacia trees - DONE!!!
You can no longer crack boiled/pickled eggs - DONE!!!
Charred syrup-covered fruit bread recipe fixed - DONE!!!
Japanese translation updated (thanks to macoto_hino) - DONE!!!
Log spam reduced
Wildcraft berries fixed in oven - DONE!!!
Candied fruit added
Lard transition timer reduced from 1440 hours to 240 - DONE!!!
Peanuts now visible in meals - DONE!!!
Dehydrated fruits cure into the same amount of dried fruits (whoops); dehydrated fruit grid recipe nerfed to compensate - DONE!!!

1.6.3
Added Breaded Mushrooms
Added Soulstorm Brew
Braziers/Superfuels recipes updated
PS meatnuggets have proper perish rates; charred meatnugget perish rate nerfed
Hard lard drops fixed
Breadcrumbs can be made in the grid, too (recipe was incomplete)
Aged meat looks right on meat hooks
Handbook mentions scrambled egg recipe change 
Cooking 104 tweaked for clarity
Boiled food added to handbook guide (whoops)
Salt in the handbook actually says it needs 10 L instead of 1 L
Patches are ALL server-side

1.6.2
Ancient Tools Compatibility added (bread/breadcrumbs and meat can be used in stuff)
Lard dries into Hardened Lard; replaces liquid lard in grid recipes
Meat/sausage & veggies can be boiled in the saucepan
Dehydrated Wildcraft berries can be used in meat stews
Chopped food nutrition nerfed to match unchopped variants
Dried meat lost nutrition bonus, gained healing
Log errors quashed
Japanese translation updated (thanks to macoto_hino)