@@ -2,14 +2,14 @@
  {
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 1 }]}
+		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 4 }]}
 	],
 	output: { type: "item", code: "game:dough-birch", stackSize: 1}
  }, 
  {
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 1 }]},
+		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 4 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:breadstarter-wild", quantity: 10 }]}
 	],
 	output: { type: "item", code: "game:dough-birch", stackSize: 1}
@@ -18,7 +18,7 @@
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:foodoilportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 1 }]}
+		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 4 }]}
 	],
 	output: { type: "item", code: "game:dough-birch", stackSize: 1}
  }, 
@@ -26,7 +26,7 @@
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:foodoilportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 1 }]},
+		{inputs: [{ type: "item", code: "game:flour-birch", quantity: 4 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:breadstarter-wild", quantity: 10 }]}
 	],
 	output: { type: "item", code: "game:dough-birch", stackSize: 1}
@@ -34,14 +34,14 @@
  {
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 1 }]}
+		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 4 }]}
 	],
 	output: { type: "item", code: "game:dough-pine", stackSize: 1}
  }, 
  {
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 1 }]},
+		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 4 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:breadstarter-wild", quantity: 10 }]}
 	],
 	output: { type: "item", code: "game:dough-pine", stackSize: 1}
@@ -50,7 +50,7 @@
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:foodoilportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 1 }]}
+		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 4 }]}
 	],
 	output: { type: "item", code: "game:dough-pine", stackSize: 1}
  }, 
@@ -58,7 +58,7 @@
 	ingredients: [
 		{inputs: [{ type: "item", code: "game:waterportion",  quantity: 10 }, { type: "item", code: "game:milkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:pasteurizedmilkportion",  quantity: 10 }, { type: "item", code: "expandedfoods:brothportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }, { type: "item", code: "expandedfoods:soymilk-edible", quantity: 10 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:foodoilportion-*",  quantity: 10 }, { type: "item", code: "expandedfoods:lard",  quantity: 10 }]},
-		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 1 }]},
+		{inputs: [{ type: "item", code: "game:flour-pine", quantity: 4 }]},
 		{inputs: [{ type: "item", code: "expandedfoods:breadstarter-wild", quantity: 10 }]}
 	],
 	output: { type: "item", code: "game:dough-pine", stackSize: 1}
