@@ -38,14 +38,6 @@
         "saturation": 140,
         "foodcategory": "Grain"
       },
-      "game:flour-birch": {
-        "saturation": 140,
-        "foodcategory": "Grain"
-      },
-      "game:flour-pine": {
-        "saturation": 140,
-        "foodcategory": "Grain"
-      },
       "expandedfoods:lard": {
         "saturation": 16,
         "health": 0.01,
