@@ -34,7 +34,7 @@ Soulstorm brew integrated with Alchemy
 Instead of simply 'cooking' certain liquids (such as sap > syrup or water > salt) , they are now actual simmer recipes 
 
 1.6.4
-Added Compote - DONE!!!
+Added Compote - DONE!!! (needs handbook update)
 Wildcraft gelatin recipes fixed - DONE!!!
 Added Acorn "Coffee" & Roasted Acorns - DONE!!!
 Handbook mentions you can get resin from acacia trees - DONE!!!
@@ -47,6 +47,7 @@ Candied fruit added
 Lard transition timer reduced from 1440 hours to 240 - DONE!!!
 Peanuts now visible in meals - DONE!!!
 Dehydrated fruits cure into the same amount of dried fruits (whoops); dehydrated fruit grid recipe nerfed to compensate - DONE!!!
+Birch and pine bread no longer has broken amounts of nutrition, kneading recipe requires 4 flour instead of 1 - DONE!!!
 
 1.6.3
 Added Breaded Mushrooms
